# sample-api

./: .gitignore  Dockerfile  README.md  changelog.md  docker-compose.yml  pyproject.toml  requirements.txt  run-unit-tests.sh  start-local.sh
.github/workflows/: ci-cd-pipeline.yml
db/migrations/: V1.0.0__init.sql
src/sample_api/: main.py
src/sample_api/core/: config.py
src/sample_api/db/: sessions.py
src/sample_api/v1/models/: __init__.py  models.py
src/sample_api/v1/repository/: housing_repository.py  housing_type_repository.py
src/sample_api/v1/routes/: housing_routes.py  housing_type_routes.py
src/sample_api/v1/structs/: housing.py  housing_type.py
tests/: test_housing_struct.py
