[tool.poetry]
name = "sample-api"
version = "0.1.0"
description = "A simple API for experimenting with"
authors = ["DeveloperExperience <Developer.Experience@gov.bc.ca>"]
readme = "README.md"
packages = [{include = "sample_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}
sqlalchemy = "^2.0.32"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]